--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hooks": "^1.0.1",
     "react-lottie": "^1.2.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
